# FLAdversarialInput

./: .gitignore  DV2607-Inl_Del_2-Adversarial_input_attack.ipynb  Makefile  README.md  flwr.ipynb  requirements.txt
.devcontainer/: devcontainer.json
adversarial/: configs.json  pyproject.toml  run_config.sh  simulate.sh
adversarial/adversarial/: analysis.ipynb  client_app.py  configs.json  configs.py  server_aid.py  server_app.py  server_functions.py  server_strategies.py  task.py
adversarial/adversarial/logging/: log1.csv  log10.csv  log11.csv  log12.csv  log13.csv  log14.csv  log15.csv  log16.csv  log17.csv  log18.csv  log19.csv  log2.csv  log20.csv  log21.csv  log22.csv  log23.csv  log24.csv  log25.csv  log3.csv  log4.csv  log5.csv  log6.csv  log7.csv  log8.csv  log9.csv
adversarial/adversarial/logging/0/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/1/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/10/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/11/: 1_log.csv  2_log.csv
adversarial/adversarial/logging/2/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/3/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/4/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/5/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
adversarial/adversarial/logging/6/: 1_log.csv  2_log.csv  3_log.csv  4_log.csv  5_log.csv
(+24 files in other folders)
