[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adversarial"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "ray==2.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Uplink"

[tool.flwr.app.components]
serverapp = "adversarial.server_app:app"
clientapp = "adversarial.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 25
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
